2019-04-xx 1.12.0 [xxxxxxx]
  + operations and properites do not overlap with class/interface compartments
  + linebreaks in classifier names are possible
  + component and artifact icons do not overlap with the label
  + activities and states better embrace their children classifiers
2019-03-10 1.11.0 [29089a8]
  + export dialog allows to select multiple file formats simultaneously
  + docbook export
  + html export
  . embunit replaced by own test functions to comply to debian packaging rules
2019-02-03 1.10.0 [9899988]
  + new classifier types for activity, state, Interaction-Overview and parametric diagrams
  + part, artifact, node and object are automatically underlined as instance
  + objects and parts are always instances
  . sqlite3 is linked dynamically
  + symbols for interruptable region, diagram reference, decision, fork, join, timeout, send-sig, rcv-event, history
2019-01-17 1.9.0 [43d5e15]
  + the database check can repair circular diagram-parent references
  + user experience improvements at using text-edit widgets
  + communication diagram does select/highlight classifiers in edit mode but lifelines in create mode
  . lifeline properties cannot be changed anymore
  + include, extends, deploy, manifest relationships show their stereotype
  + refine and trace relations exist for requirements
  + component interfaces are rendered as circle and half-circle
  + new label-positioning of ports
2019-01-01 1.8.0 [9dae9d7]
  + in navigation mode, diagrams can be re-ordered by dragging their names in the tree view
  . F7 workaround removed, key F7 is without function now
  + in edit mode, features can be re-ordered, ports can be moved along the classifier border
  + ids of diagrams and classifiers are shown
2018-11-21 1.7.1 [8ebf36a]
  . user-doc and manpages are generated from docbook now
  + doubleclick on .cfu1 files starts crystal_facet_uml
2018-11-01 1.7.0 [15274aa]
  + tree view allows to navigate interactively