@@ -3,6 +3,7 @@
   + linebreaks in classifier names are possible
   + component and artifact icons do not overlap with the label
   + activities and states better embrace their children classifiers
+  + labels of ports and interfaces are layouted avoiding overlaps
 2019-03-10 1.11.0 [29089a8]
   + export dialog allows to select multiple file formats simultaneously
   + docbook export
